--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,12 @@
 <html>
 <body>
     <div>
-        <form action="/user_create" method="POST">
+        <form action="/customer_create" method="POST">
             <input  placeholder="First name" name="first_name"/>
             <input  placeholder="Last name" name="last_name"/>
+            <input  placeholder="Phone Number" name="phone_number"/>
             <button>Submit</button>
         </form>
     </div>
-
-
-
 </body>
-
-
-
 </html>
