--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
     <div>
         Enter Customer Details
         <hr/>
-        <form action="/customer_create" method="POST">
+        <form action="/api/customer_create" method="POST">
             <input  placeholder="First name" name="first_name"/>
             <input  placeholder="Last name" name="last_name"/>
+            <input  placeholder="Address" name="address"/>
             <input  placeholder="Phone Number" name="phone_number"/>
             <button>Submit</button>
         </form>
