--- a/public/vendor.html
+++ b/public/vendor.html
@@ -3,7 +3,7 @@
     <div>
         Enter Vendor Details
         <hr/>
-        <form action="/vendor_create" method="POST">
+        <form action="/api/vendor_create" method="POST">
             <input  placeholder="First name" name="vendor_first_name"/>
             <input  placeholder="Last name" name="vendor_last_name"/>
             <input  placeholder="Phone number" name="vendor_number"/>
