--- a/public/product.html
+++ b/public/product.html
@@ -5,7 +5,7 @@
         <hr/>
         <form action="/api/product_create" method="POST">
             <input  placeholder="Vendor number" name="vendor_number"/>
-            <input  placeholder="Vendor name" name="vendor"/>
+            <input  placeholder="Vendor name" name="vendor_name"/>
             <input  placeholder="Product name" name="product_name"/>
             <input  placeholder="Product quantity" name="product_quantity"/>
             <button>Submit</button>
