Fixed db errors and added customer routes

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <div>
         Enter Customer Details
         <hr/>
-        <form action="/api/customer_create" method="POST">
+        <form action="/api/customers/create" method="POST">
             <input  placeholder="First name" name="first_name"/>
             <input  placeholder="Last name" name="last_name"/>
             <input  placeholder="Address" name="address"/>
