Front-end implemented

--- a/public/buyproduct.html
+++ b/public/buyproduct.html
@@ -3,7 +3,7 @@
     <div>
         Buy Product
         <hr/>
-        <form action="/api/product_buy" method="POST">
+        <form action="/api/products/buy" method="POST">
             <input  placeholder="Your name" name="customer_name"/>
             <input  placeholder="Your number" name="customer_number"/>
             <input  placeholder="product id" name="product_id"/>
