--- a/public/product.html
+++ b/public/product.html
@@ -3,7 +3,7 @@
     <div>
         Enter Product Details
         <hr/>
-        <form action="/api/product_create" method="POST">
+        <form action="/api/products/create" method="POST">
             <input  placeholder="Vendor number" name="vendor_number"/>
             <input  placeholder="Vendor name" name="vendor_name"/>
             <input  placeholder="Product name" name="product_name"/>
