--- a/public/vendor.html
+++ b/public/vendor.html
@@ -3,10 +3,10 @@
     <div>
         Enter Vendor Details
         <hr/>
-        <form action="/api/vendor_create" method="POST">
+        <form action="/api/vendors/createVendor" method="POST">
             <input  placeholder="First name" name="vendor_first_name"/>
             <input  placeholder="Last name" name="vendor_last_name"/>
-            <input  placeholder="Phone number" name="vendor_number"/>
+            <input  placeholder="Phone number" name="vendor_phoneNo"/>
             <button>Submit</button>
         </form>
     </div>
